Hero section mobile fix

--- a/src/css/HeroSection.module.css
+++ b/src/css/HeroSection.module.css
@@ -5,7 +5,7 @@
     top: 1rem;
     left: 2rem;
     z-index: 10;
-    font-size: clamp(1.6rem, 2.2vw, 3.5rem);
+    font-size: clamp(1.4rem, 2.2vw, 3.5rem);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.406));
 }
 
@@ -25,6 +25,9 @@
     }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
-
+@media (max-width: 769px) {
+    .HeroSection {
+        top: 0.5rem;
+        left: 0.8rem;
+    }   
 }
